# fall-2025-ai

./: README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
references/: classification_knn.pptx  linear_regression.pptx  multiple_linear_regression.pptx
